# pole

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: use-uv.mdc
docs/: agent_mutator.md  architecture.md
examples/: README.md  _utils.py  basic_example.py
examples/g2p/: README.md  base_prompt.py  gemma3.py  optimize_g2p.py
examples/sentiment/: README.md  dataset.py  optimize_sentiment.py  optimize_with_agent.py
plans/: plan_001.md  plan_002_architectural_review.md  plan_003_diversity_solution.md  plan_004_quick_win_diversity.md  plan_005_optimizer_flaws_analysis.md  plan_006_agent_solutions_analysis.md  plan_007_feedback_agent_design.md
src/pole/: __init__.py  agent_mutator.py  constants.py  history.py  mutator.py  optimizer.py  reporter.py
src/pole/agents/: __init__.py  mutator_agent.py  verifier_agent.py
src/pole/constants/: config.py  mutation_strategies.py  prompts.py
src/pole/mutators/: __init__.py  agent_mutator.py  base_mutator.py  simple_mutator.py
